--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header class="hero-section">
         <div class="pre-sale-banner">
             <span class="dot"></span>
-            Prévende exclusive • 200 places limitées
+            Prévente exclusive • 200 places limitées
         </div>
         <div class="hero-content">
             <h1>Créez votre<br>communauté premium</h1>
